Changed some text in HTML

--- a/Book.html
+++ b/Book.html
@@ -187,9 +187,9 @@ background-color:#DAA520;
 <div id="div2">
 <form action="booking.php" onSubmit="return onSubmit()" method="post">
 <table>
-  <tr><td>Enter Name:</td> <td><input type="text" class="text4" name="name" maxlength="20" required></td></tr>
+  <tr><td>Enter Full Name:</td> <td><input type="text" class="text4" name="name" maxlength="20" required></td></tr>
  <tr><td> Enter Mobile No. : </td> <td><input type="number" class="text4" name="mobile" maxlength="10" required></td></tr>
-<tr><td>  Enter Email:</td> <td> <input type="email" class="text4" name="email"   required></td></tr>
+<tr><td>  Enter Valid Email:</td> <td> <input type="email" class="text4" name="email"   required></td></tr>
 <tr><td>  Enter Destination:</td> <td> <input type="text" class="text4" name="dest" maxlength="20" required></td></tr>
 <tr><td>  Number of Tickets:</td> <td> <input type="number" class="text4" name="ticket" maxlength="2" required></td></tr>
  <tr><td> Age: </td> <td><input type="number" class="text4" name="age" maxlength="2" required></td></tr>
