More text changes in Home Page

--- a/GTB.html
+++ b/GTB.html
@@ -167,7 +167,7 @@ Thanks to all staff."
 
 
 "Stayed at arabian dreams. Here is homely environment due to staffs approach location quick 
-access to lovely tourist spots for family. Thank you!"
+access to lovely tourist spots for family. Amazing experience ever. Thank you!"
 </pre>
 
 <br>
